<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="150"
    android:backgroundTint="#033D6C"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:text="@string/creat_new_account"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="24sp"
        android:textStyle="normal|bold|italic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:text="@string/if_you_do_not_already_have_an_account" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/e_mail" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/password1" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
           app:passwordToggleEnabled="true"
            >

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/re_password1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="#2196F3"
        android:text="@string/create"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <LinearLayout

        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/you_have_an_account" />

        <TextView
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="start|center"

            android:text="@string/login"
            android:textColor="#1976D2" />


    </LinearLayout>