<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center"
    >

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcom_back"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="24sp"
        android:textStyle="normal|bold|italic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:elegantTextHeight="true"
        android:text="@string/if_you_already_have_an_account_log_in" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:text="@string/username" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="350dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/password" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="#0884E6"
        android:text="@string/log_in"
        android:textColor="#F1ECEC"
        android:textColorHint="#0C436E"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/you_dont_have_an_account" />

        <TextView
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#04508C" />
