<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/adapter"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="274dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/user"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="119dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/bmirecored"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="81dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/holder"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="160dp" />
</LinearLayout>