<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".homeActivity2">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"

        />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/himohammed1"
        android:textColor="#0B71C3"
        android:textSize="24sp"
        android:textStyle="normal|bold|italic" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/current_status"
        android:textColor="#085EA3"
        android:textSize="20sp"
        android:textStyle="normal|bold|italic" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:text="@string/normal_still_good"
        android:textAlignment="center"
        />


    <androidx.recyclerview.widget.RecyclerView

        android:layout_width="350dp"
        android:id="@+id/rv_main"
        android:layout_height="300dp" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:backgroundTint="#107DD5"
            android:text="@string/add_food"
            android:textColor="#EDE4E4"
            android:textSize="20sp"
            android:textStyle="normal|bold|italic" />

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="#107DD5"
            android:text="@string/add_record"
            android:textColor="#EDE4E4"
            android:textSize="20sp"
            android:textStyle="normal|bold|italic" />

    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#107DD5"
        android:text="@string/view_food"
        android:textSize="20sp"
        android:textStyle="normal|bold|italic" />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="#FAF7F7"
        android:text="@string/logout"
        android:textColor="#070707" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>