<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AddfooddetailsActivity">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_food_details"

        android:gravity="center"
        android:textColor="#0C73C5"

        android:textSize="24sp"
        android:textStyle="normal|bold|italic" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView35"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"

            android:text="@string/name"
            android:textAlignment="viewStart"
            android:textColor="#2196F3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView37"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/categery"
            android:textAlignment="viewStart"
            android:textColor="#2196F3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView39"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/calary"
            android:textAlignment="viewStart"
            android:textColor="#2196F3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView41"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/photo"
            android:textAlignment="viewStart"
            android:textColor="#2196F3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:gravity="center"
            app:srcCompat="@drawable/food"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button9"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:backgroundTint="#2196F3"
            android:text="@string/upload_photo"
            android:textColor="#EBF1F6"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button10"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="#2196F3"
            android:text="@string/save"
            android:textColor="#F3F3F3"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</LinearLayout>