<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="24sp"
        android:textStyle="normal|bold|italic"
        android:text="@string/hi_mohammed" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginBottom="300dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/current_status"
            android:textStyle="normal|bold|italic"
            android:textColor="#2196F3"

            />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="0"
            android:gravity="center"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/normal_still_good"
            android:autofillHints="" />
    </LinearLayout>
</LinearLayout>