<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddBMIrecordActivity">

  <TextView
      android:id="@+id/textView18"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="90dp"
      android:gravity="center"

      android:text="@string/newrecord"
      android:textColor="#146AAF"
      android:textSize="24sp"
      android:textStyle="normal|bold|italic" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:gravity="center"
      android:layout_marginTop="10dp"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/wieght" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/resource__"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:gravity="center" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="48dp"
        android:layout_height="48dp"

        app:srcCompat="@drawable/___"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/todo" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:gravity="center"
      android:layout_marginTop="10dp"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/lenght" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/resource__"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:gravity="center"
       />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/___"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/todo" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:gravity="center"
      android:layout_marginTop="10dp"
      android:orientation="horizontal"

      >

    <TextView
        android:id="@+id/textView23"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/date" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:gravity="center"
      android:layout_marginTop="10dp"
      android:orientation="horizontal"
      >

    <TextView
        android:id="@+id/textView25"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="Time" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
       />
  </LinearLayout>

  <Button
      android:id="@+id/button4"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:backgroundTint="#2196F3"
      android:text="Save Data" />

</LinearLayout>
